# verilog-format

./: Cargo.toml  LICENSE  README.md  grammar.txt
benches/: format.rs
src/: ast.rs  lexer.rs  lib.rs  main.rs  parser.lalrpop  printer.rs  test.rs
tests/: Encoder.fmt.sv  Encoder.sv  comment.fmt.sv  comment.sv  port.fmt.sv  test_cpu.fmt.sv  test_cpu.sv
