[package]
name = "verilog_format"
version = "0.1.0"
authors = ["Jiajie Chen <c@jia.je>"]
edition = "2021"

[dependencies]
nom = "7.1.1"
regex = "1.5.6"
clap = { version = "3.1.18", features = ["cargo"] }
lazy_static = "1.4.0"

[dev-dependencies]
pretty_assertions = "1.2.1"
criterion = "0.3.5"

[[bench]]
name = "format"
harness = false
